--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.0",
     "react-virtualized": "^9.22.6",
     "tailwindcss": "^4.1.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "worker-timers": "^8.0.21"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
